[package]
name = "rust-todo-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surrealdb = "1.0.0-beta.8"
anyhow = "1.0.70"
tokio = { version = "1.26.0", features = ["full"] }
crossterm = "0.25"
chrono = { version = "0.4" }
rand = { version = "0.7.3", default-features = false, features = ["std"] }
tui = "0.19"
thiserror = "1.0"